Add dreichelt to authors

--- a/AUTHORS
+++ b/AUTHORS
@@ -44,3 +44,4 @@ Authors of OpenSlides in chronological order of first contribution:
     Bastian Rihm <brihm@intevation.de>
     Abdullah Şevik <a.alveolus@icloud.com>
     Loki Elble <loki.elble@intevation.de>
+    Danny Reichelt <dreichelt@intevation.de>
