--- a/AUTHORS
+++ b/AUTHORS
@@ -45,3 +45,4 @@ Authors of OpenSlides in chronological order of first contribution:
     Abdullah Şevik <a.alveolus@icloud.com>
     Loki Elble <loki.elble@intevation.de>
     Danny Reichelt <dreichelt@intevation.de>
+    Hannes Janott <hannes.janott@openslides.com>
