--- a/i18n/template-en.pot
+++ b/i18n/template-en.pot
@@ -87,9 +87,9 @@ msgid "Access groups"
 msgstr ""
 
 msgid ""
-"Access only possible for participants of this event. All other accounts "
-"(including organization and committee admins) may not open the closed event. "
-"It is locked from the inside."
+"Access only possible for participants of this meeting. All other accounts "
+"(including organization and committee admins) may not open the closed "
+"meeting. It is locked from the inside."
 msgstr ""
 
 msgid "Access-data"
