--- a/i18n/template-en.pot
+++ b/i18n/template-en.pot
@@ -13,6 +13,11 @@ msgstr ""
 msgid "%num% emails were send sucessfully."
 msgstr ""
 
+msgid ""
+"%num% participants could not be locked out because they have administrative "
+"permissions."
+msgstr ""
+
 msgid "-Ä"
 msgstr ""
 
@@ -129,6 +134,9 @@ msgid "Activate closed meeting"
 msgstr ""
 
 msgid "Activate design"
+msgstr ""
+
+msgid "Activate public access"
 msgstr ""
 
 msgid "Activate the selection field 'motion editor'"
@@ -451,6 +459,9 @@ msgstr ""
 msgid "Are you sure you want to delete all selected files and folders?"
 msgstr ""
 
+msgid "Are you sure you want to delete all selected genders?"
+msgstr ""
+
 msgid "Are you sure you want to delete all selected meetings?"
 msgstr ""
 
@@ -500,6 +511,9 @@ msgstr ""
 msgid "Are you sure you want to delete this file?"
 msgstr ""
 
+msgid "Are you sure you want to delete this gender?"
+msgstr ""
+
 msgid "Are you sure you want to delete this group?"
 msgstr ""
 
@@ -536,6 +550,9 @@ msgstr ""
 msgid "Are you sure you want to delete this workflow?"
 msgstr ""
 
+msgid "Are you sure you want to discard all changes and update this form?"
+msgstr ""
+
 msgid "Are you sure you want to discard this amendment?"
 msgstr ""
 
@@ -553,6 +570,9 @@ msgid ""
 msgstr ""
 
 msgid "Are you sure you want to irrevocably remove your point of order?"
+msgstr ""
+
+msgid "Are you sure you want to make this file/folder public?"
 msgstr ""
 
 msgid "Are you sure you want to number all agenda items?"
@@ -619,6 +639,9 @@ msgid "Are you sure you want to stop this voting?"
 msgstr ""
 
 msgid "Are you sure you want to submit a point of order?"
+msgstr ""
+
+msgid "Are you sure you want to unpublish this file/folder?"
 msgstr ""
 
 msgid "As of"
@@ -861,11 +884,11 @@ msgid "Can forward motions to committee"
 msgstr ""
 
 msgid ""
-"Can forward motions to other meetings within the OpenSlides instance. \n"
+"Can forward motions to other meetings within the OpenSlides instance.\n"
 "\n"
 "Further requirements:\n"
 "1. forwarding hierarchy must be set at the organizational level in the "
-"committee. \n"
+"committee.\n"
 "2. target meeting must be created.\n"
 "3. forwarding must be activated in the workflow in the state."
 msgstr ""
@@ -928,7 +951,7 @@ msgid "Can nominate oneself"
 msgstr ""
 
 msgid ""
-"Can nominate other participants as candidates. \n"
+"Can nominate other participants as candidates.\n"
 "\n"
 "Requires group permission: [Can see participants]"
 msgstr ""
@@ -960,7 +983,9 @@ msgstr ""
 msgid "Can see elections"
 msgstr ""
 
-msgid "Can see email, username and SSO identification of all participants."
+msgid ""
+"Can see email, username, membership number, SSO identification and locked "
+"out state of all participants."
 msgstr ""
 
 msgid "Can see files"
@@ -1013,7 +1038,7 @@ msgstr ""
 
 msgid ""
 "Can see the History menu item with the history of processing timestamps for "
-"motions, elections and participants. \n"
+"motions, elections and participants.\n"
 "\n"
 "Note: For privacy reasons, it is recommended to limit the rights to view the "
 "History significantly."
@@ -1053,15 +1078,15 @@ msgstr ""
 
 msgid ""
 "Can see the menu item Elections, including the list of candidates and "
-"results. \n"
+"results.\n"
 "\n"
 "Note: The right to vote is defined directly in the ballot."
 msgstr ""
 
 msgid ""
 "Can see the menu item Participants and therefore the following data from all "
-"participants: \n"
-"Personal data: Name, pronoun, gender. \n"
+"participants:\n"
+"Personal data: Name, pronoun, gender.\n"
 "Meeting specific information: Structure level, Group, Participant number, "
 "About me, Presence status."
 msgstr ""
@@ -1106,10 +1131,16 @@ msgstr ""
 msgid "Candidates"
 msgstr ""
 
+msgid "Cannot delete published files"
+msgstr ""
+
 msgid "Cannot do that in demo mode!"
 msgstr ""
 
 msgid "Cannot forward motions"
+msgstr ""
+
+msgid "Cannot move published files"
 msgstr ""
 
 msgid "Cannot receive motions"
@@ -1518,6 +1549,9 @@ msgstr ""
 msgid "Default visibility for new agenda items (except topics)"
 msgstr ""
 
+msgid "Default vote method"
+msgstr ""
+
 msgid "Default vote weight"
 msgstr ""
 
@@ -1648,6 +1682,9 @@ msgstr ""
 msgid "Do you really want to go ahead?"
 msgstr ""
 
+msgid "Do you really want to lock this participant out of the meeting?"
+msgstr ""
+
 msgid "Do you really want to make available this meeting as a public template?"
 msgstr ""
 
@@ -1655,6 +1692,12 @@ msgid "Do you really want to save your changes?"
 msgstr ""
 
 msgid "Do you really want to stop sharing this meeting as a public template?"
+msgstr ""
+
+msgid "Do you really want to undo the lock out of the participant?"
+msgstr ""
+
+msgid "Do you want to update the amendment text? All changes will be lost."
 msgstr ""
 
 msgid "Does not have notes"
@@ -1856,6 +1899,11 @@ msgid ""
 "state of the motion. Other administrative functions are excluded."
 msgstr ""
 
+msgid ""
+"Enables public access to this meeting without login data. Permissions can be "
+"set after activation in the new group 'Public'."
+msgstr ""
+
 msgid "Enables the ability to create votings for motions in this state."
 msgstr ""
 
@@ -1953,6 +2001,9 @@ msgstr ""
 msgid "Event location"
 msgstr ""
 
+msgid "Every admin in every meeting will be able to see this content."
+msgstr ""
+
 msgid ""
 "Everyone can see the request of a point of order (instead of managers for "
 "list of speakers only)"
@@ -2013,6 +2064,9 @@ msgid "File"
 msgstr ""
 
 msgid "File is being used"
+msgstr ""
+
+msgid "File is used in:"
 msgstr ""
 
 msgid "Filename"
@@ -2133,6 +2187,9 @@ msgstr ""
 msgid "Gender"
 msgstr ""
 
+msgid "Genders"
+msgstr ""
+
 msgid "General"
 msgstr ""
 
@@ -2194,9 +2251,6 @@ msgid "Groups with read permissions"
 msgstr ""
 
 msgid "Groups with write permissions"
-msgstr ""
-
-msgid "Guest"
 msgstr ""
 
 msgid "Has SSO identification"
@@ -2479,7 +2533,7 @@ msgid "Is active"
 msgstr ""
 
 msgid ""
-"Is allowed to add himself/herself to the list of speakers. \n"
+"Is allowed to add himself/herself to the list of speakers.\n"
 "\n"
 "Note:\n"
 "Optional combination of requests to speak with presence status is possible. "
@@ -2513,6 +2567,9 @@ msgstr ""
 msgid "Is in archived meetings"
 msgstr ""
 
+msgid "Is locked out"
+msgstr ""
+
 msgid "Is manager"
 msgstr ""
 
@@ -2543,10 +2600,19 @@ msgstr ""
 msgid "Is not in archived meetings"
 msgstr ""
 
+msgid "Is not locked out"
+msgstr ""
+
 msgid "Is not present"
 msgstr ""
 
+msgid "Is not public"
+msgstr ""
+
 msgid "Is present"
+msgstr ""
+
+msgid "Is public"
 msgstr ""
 
 msgid "Is speaker"
@@ -2557,6 +2623,12 @@ msgstr ""
 
 msgid ""
 "It is not allowed to delete countdowns used for list of speakers or polls"
+msgstr ""
+
+msgid ""
+"It is not allowed to set the permisson 'Can manage participants' to a locked "
+"out user. Please unset the lockout state before adding a group with this "
+"permission."
 msgstr ""
 
 msgid "It's a draw!"
@@ -2700,6 +2772,12 @@ msgstr ""
 msgid "Loading data. Please wait ..."
 msgstr ""
 
+msgid "Lock out user from this meeting."
+msgstr ""
+
+msgid "Locked out"
+msgstr ""
+
 msgid "Logged-in users"
 msgstr ""
 
@@ -2707,9 +2785,6 @@ msgid "Login"
 msgstr ""
 
 msgid "Login anyway"
-msgstr ""
-
-msgid "Login as guest"
 msgstr ""
 
 msgid "Login button text"
@@ -2722,6 +2797,10 @@ msgid "Lowest applause amount"
 msgstr ""
 
 msgid "Main motion and line number"
+msgstr ""
+
+msgid ""
+"Make background color from meta information box on the projector transparent"
 msgstr ""
 
 msgid "Mandates switched sucessfully!"
@@ -2865,6 +2944,9 @@ msgid "Motion change recommendation deleted"
 msgstr ""
 
 msgid "Motion change recommendation updated"
+msgstr ""
+
+msgid "Motion changed"
 msgstr ""
 
 msgid "Motion created"
@@ -3023,6 +3105,9 @@ msgstr ""
 msgid "New folder"
 msgstr ""
 
+msgid "New gender"
+msgstr ""
+
 msgid "New group"
 msgstr ""
 
@@ -3078,9 +3163,6 @@ msgid "No admin role"
 msgstr ""
 
 msgid "No category"
-msgstr ""
-
-msgid "No change recommendations yet"
 msgstr ""
 
 msgid "No changes at the text."
@@ -3168,6 +3250,9 @@ msgid "Normal (http/2)"
 msgstr ""
 
 msgid "Not found"
+msgstr ""
+
+msgid "Not locked out"
 msgstr ""
 
 msgid ""
@@ -3442,6 +3527,9 @@ msgstr ""
 msgid "Parent agenda item"
 msgstr ""
 
+msgid "Parent motion text changed"
+msgstr ""
+
 msgid "Parliament options"
 msgstr ""
 
@@ -3599,9 +3687,6 @@ msgstr ""
 msgid "Polls"
 msgstr ""
 
-msgid "Possible options"
-msgstr ""
-
 msgid "Possible points of order"
 msgstr ""
 
@@ -3699,6 +3784,9 @@ msgid "Proxy holders"
 msgstr ""
 
 msgid "Public"
+msgstr ""
+
+msgid "Public access"
 msgstr ""
 
 msgid "Public item"
@@ -4072,6 +4160,9 @@ msgid "Set internal"
 msgstr ""
 
 msgid "Set it manually"
+msgstr ""
+
+msgid "Set lock out ..."
 msgstr ""
 
 msgid "Set motion block"
@@ -4469,6 +4560,9 @@ msgstr ""
 msgid "Switch"
 msgstr ""
 
+msgid "System"
+msgstr ""
+
 msgid "Table of contents"
 msgstr ""
 
@@ -4666,6 +4760,9 @@ msgstr ""
 msgid "This field is required."
 msgstr ""
 
+msgid "This file will also be deleted from all meetings."
+msgstr ""
+
 msgid "This is not a number."
 msgstr ""
 
@@ -4678,6 +4775,9 @@ msgid "This meeting"
 msgstr ""
 
 msgid "This meeting is archived"
+msgstr ""
+
+msgid "This meeting is public"
 msgstr ""
 
 msgid "This paragraph does not exist in the main motion anymore:"
@@ -4873,6 +4973,9 @@ msgid "Unknown participant"
 msgstr ""
 
 msgid "Unknown user"
+msgstr ""
+
+msgid "Unpublish"
 msgstr ""
 
 msgid "Unsaved changes will not be applied."
@@ -5149,6 +5252,16 @@ msgid "Yes/No/Abstain per candidate"
 msgstr ""
 
 msgid "Yes/No/Abstain per list"
+msgstr ""
+
+msgid ""
+"You are moving a file from a public folder into an not published folder. The "
+"file will not be accessible in meetings afterwards."
+msgstr ""
+
+msgid ""
+"You are moving an unpublished file to a public folder. The file will be "
+"accessible in ALL meetings afterwards."
 msgstr ""
 
 msgid "You are not allowed to see all entitled users."
@@ -5437,6 +5550,9 @@ msgstr ""
 msgid "lightblue"
 msgstr ""
 
+msgid "locked out"
+msgstr ""
+
 msgid "logged-in users"
 msgstr ""
 
@@ -5519,6 +5635,9 @@ msgid "remove"
 msgstr ""
 
 msgid "remove group(s)"
+msgstr ""
+
+msgid "removed user"
 msgstr ""
 
 msgid "represented by"
