--- a/AUTHORS
+++ b/AUTHORS
@@ -46,3 +46,4 @@ Authors of OpenSlides in chronological order of first contribution:
     Loki Elble <loki.elble@intevation.de>
     Danny Reichelt <dreichelt@intevation.de>
     Hannes Janott <hannes.janott@openslides.com>
+    Annalena Bebenroth <annalena.bebenroth@intevation.de>
