--- a/patchnotes/4.2.0.md
+++ b/patchnotes/4.2.0.md
@@ -1,10 +1,10 @@
-## Patchnotes 4.2.0
+## Patchnotes
 
-New Features:
+### New Features
 
 - Motions > Amendments: New setting for extension field added to motion form. This allows participants with motion management rights to enter submitters in a free text field during the motion creation process.
 
-Optimizations:
+### Optimizations
 
 - Public access > Meetings > Groups: Group name depends on the language setting of the meeting
 - Logged-in users who are set to inactive are logged out immediately
@@ -18,7 +18,7 @@ Optimizations:
   - Opera: 86
   - Edge: 120
 
-Bug Fixes:
+### Bug Fixes
 
 - Meeting > List of speakers: The “Add me” button is no longer visible if users are not allowed to add themselves to the list of speaker.
 - Meeting > PDF exports: PDFs can also be exported without a meeting description.
