Add one more missing note

--- a/patchnotes/4.2.1.md
+++ b/patchnotes/4.2.1.md
@@ -19,6 +19,7 @@
 
 - Login page: When users logged out of an event and the login page was reloaded, an error was displayed.
 - Logout from meeting: Fixed a bug where the 'Public access' button on the login page was not visible when logging out of a meeting despite active public access.
+- Meeting > Duplicate: Duplication was not possible if a list election existed in the meeting
 - Meeting > Language: Fixed bug that navigation menu was displayed in English instead of configured language.
 - Motions > Creation: Fixed a bug that prevented users with the permissions ' Can create motions' and 'Can manage motion metadata' and the activated setting 'Activate submitter extension field in motion creation form' from creating motion.
 - Motions > Projection: Projection problem with motions with changed line numbering and simultaneous change recommendation fixed.
