--- a/AUTHORS
+++ b/AUTHORS
@@ -40,7 +40,7 @@ Authors of OpenSlides in chronological order of first contribution:
     Camille Akmut
     Johannes Rolf <johannes.rolf@rwth-aachen.de>
     Luisa Beerboom <luisa.beerboom@intevation.de>
-    Magnus Schieder <magnuns.schieder@intevation.de>
+    Magnus Schieder <magnus.schieder@intevation.de>
     Bastian Rihm <brihm@intevation.de>
     Abdullah Şevik <a.alveolus@icloud.com>
     Loki Elble <loki.elble@intevation.de>
